--- a/cloud/intro.ipynb
+++ b/cloud/intro.ipynb
@@ -58,10 +58,10 @@
     "\n",
     "### 1. Explain the key differences between on-premise and cloud computing.\n",
     "\n",
-    "**On-premise** refers to computing resources (such as servers, storage, and networking equipment) that are owned and maintained by an organization within its physical location. **Cloud computing** refers to the use of remote servers hosted on the internet to store, manage, and process data instead of local servers.\n",
+    "**On-premise** refers to computing resources (such as servers, storage, and networking equipment) that are owned and `maintained by an organization within its physical` location. \n",
+    "**Cloud computing** refers to the use of `remote servers` hosted on the internet to store, manage, and process data instead of local servers.\n",
     "\n",
     "Key differences:\n",
-    "- **Ownership**: On-premise resources are owned by the organization, while cloud computing resources are provided and managed by third-party vendors.\n",
     "- **Cost**: On-premise computing involves a significant upfront capital investment, while cloud computing is generally a pay-as-you-go model.\n",
     "- **Scalability**: Cloud computing offers more flexible scalability compared to on-premise systems, which may require additional hardware purchases.\n",
     "- **Maintenance**: Cloud providers manage infrastructure maintenance, whereas organizations with on-premise solutions must handle maintenance themselves.\n",
@@ -71,15 +71,21 @@
     "- **Cost Efficiency**: Cloud computing eliminates the need for large upfront investments in hardware and infrastructure, shifting costs to a more predictable, subscription-based model.\n",
     "- **Scalability**: The ability to easily scale resources up or down based on demand.\n",
     "- **Accessibility**: Cloud services can be accessed from anywhere with an internet connection, improving remote work capabilities.\n",
+    "\n",
     "- **Disaster Recovery**: Cloud computing often includes built-in disaster recovery solutions, ensuring data availability.\n",
     "- **Flexibility**: Cloud computing offers a wide variety of services that can be tailored to an organization’s needs.\n",
     "\n",
     "### 3. Describe the layers of cloud computing.\n",
     "\n",
-    "Cloud computing is typically described in three layers:\n",
-    "- **IaaS (Infrastructure as a Service)**: Provides basic infrastructure services such as compute power, storage, and networking. Example: AWS EC2, Google Compute Engine.\n",
-    "- **PaaS (Platform as a Service)**: Provides a platform for developing, running, and managing applications without dealing with underlying infrastructure. Example: AWS Elastic Beanstalk, Google App Engine.\n",
-    "- **SaaS (Software as a Service)**: Provides software applications delivered over the internet, eliminating the need for users to install or maintain software. Example: Google Workspace, Microsoft Office 365.\n",
+    "     netowrking - connection bw devices of the cloud\n",
+    "        storage  \n",
+    "        servers - physical or virtualized server that provides the `computing power`\n",
+    " virtualization - virtual machines and containers, enabling users to have isolated environments\n",
+    "             os -  \n",
+    "     middleware - software tools and services that connect different applications (message q, db)\n",
+    "        runtime - runtime environment \n",
+    "           data - Databases (SQL/NoSQL), data warehouses, and data lakes\n",
+    "            app - \n",
     "\n",
     "### 4. Define the terms IaaS, PaaS, and SaaS. How are they related to the layers of cloud computing?\n",
     "\n",
@@ -102,7 +108,16 @@
     "\n",
     "### 7. What is the difference between a public cloud and a private cloud? What is a hybrid cloud?\n",
     "\n",
-    "- **Public Cloud**: Cloud resources are owned and managed by a third-party service provider and are shared by multiple customers. Example: AWS, Google Cloud, Microsoft Azure.\n",
+    "- **Public Cloud**: \n",
+    "   - third-party service provider\n",
+    "   - shared by multiple customers\n",
+    "   - Scalable\n",
+    "   - no need maintenance\n",
+    "   - cost: pay as you use\n",
+    "   BUT:\n",
+    "   - Depends totaly on cloud\n",
+    "   - security of data\n",
+    "\n",
     "- **Private Cloud**: Cloud resources are used exclusively by a single organization, and the infrastructure can either be hosted on-premise or by a third-party provider.\n",
     "- **Hybrid Cloud**: A combination of both public and private clouds that allows data and applications to be shared between them. This gives organizations greater flexibility and more deployment options.\n",
     "\n",
@@ -117,7 +132,7 @@
     "### 9. What is the difference between scalability and elasticity?\n",
     "\n",
     "- **Scalability** refers to the ability to increase or decrease resources (compute, storage, etc.) to meet increasing or decreasing demands over time.\n",
-    "- **Elasticity** refers to the ability to automatically scale resources up or down in real time based on immediate demand.\n",
+    "- **Elasticity** refers to the ability to `automatically scale` resources up or down in `real time` based on immediate demand.\n",
     "\n",
     "### 10. Does a cloud differ from an ESXi that hosts virtual machines?\n",
     "\n",
@@ -133,7 +148,6 @@
     "**Disadvantages**:\n",
     "- **Dependency on Internet Connectivity**: Services are inaccessible without internet access.\n",
     "- **Security Concerns**: Data is hosted on third-party servers, which may raise security and compliance concerns.\n",
-    "- **Limited Control**: Users may have limited control over the underlying infrastructure.\n",
     "\n",
     "### 12. Explain the \"Shared Responsibility Model\".\n",
     "\n",
